examples/test/testpolicy16453.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16453
  namespace: namespace155
spec:
  podSelector:
    matchLabels:
      key16: value38
      key27: value45
      key44: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value23
      podSelector:
        matchLabels:
          key27: value41
          key1: value4
          key0: value33
